# mina

./: .bazelignore  .bazelrc  .dockerignore  .drone.yml  .editorconfig  .envrc  .genesis-ledger.ml.jinja  .gitattributes  .gitignore  .gitmodules  .mailmap  .mergify.yml  .mergify.yml.jinja  .nix-key.gpg.asc  .ocamlclose  .ocamlformat  .prettierignore  .prettierrc  .travis.yml  .xrefcheck.yaml  AGENT.md  BRANCHING.md  BUILD.bazel  BUILD.bzl  CHANGES  CHANGES.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DIRECTORY_STRUCTURE.md  DUMMY  Dockerfile  Dockerfile-base  Dockerfile-coda  Dockerfile-codaslim  Dockerfile-nanobit  Dockerfile-step2-build  (+140 more)
bellman/: Cargo.toml
bellman/src/: gadgets.rs  multicore.rs  multiexp.rs
bellman/src/gadgets/: sha256.rs
bellman/src/groth16/: generator.rs  mod.rs  prover.rs
bzl/config/: BUILD.bazel  BUILD.bzl
bzl/config/rust/: BUILD.bazel  BUILD.bzl
bzl/host/: BUILD.bazel
bzl/ppx/: BUILD.bazel  BUILD.bzl
bzl/ppx/exe/: BUILD.bazel
ci/: .gitignore  pyproject.toml
ci/src/mina_ci/: __init__.py  __main__.py  jobs.py  rust.py
ff/: Cargo.toml
ff/ff_derive/: Cargo.toml
ff/ff_derive/src/: lib.rs
manifest/: .ocamlformat  dune  dune_s_expr.ml  dune_s_expr.mli  externals.ml  layer_base.ml  layer_concurrency.ml  layer_crypto.ml  layer_ledger.ml  layer_network.ml  layer_snarky.ml  layer_storage.ml  layer_test.ml  layer_transaction.ml  main.ml  manifest.ml  manifest.mli  product_batch_txn_tool.ml  product_best_tip_merger.ml  product_disk_caching_stats.ml  product_ledger_export_bench.ml  product_logproc.ml  product_mina.ml  product_missing_blocks_auditor.ml  product_validate_keypair.ml  product_zkapp_test_transaction.ml  product_zkapps_examples.ml  test_integration.ml  test_manifest.ml
manifest/layers/: layer_base.ml  layer_base_types.ml  layer_concurrency.ml  layer_consensus.ml  layer_crypto.ml  layer_domain.ml  layer_graphql.ml  layer_infra.ml  layer_kimchi.ml  layer_ledger.ml  layer_logging.ml  layer_network.ml  layer_node.ml  layer_pickles.ml  layer_ppx.ml  layer_protocol.ml  layer_rosetta.ml  layer_service.ml  layer_snark_worker.ml  layer_snarky.ml  layer_storage.ml  layer_test.ml  layer_tooling.ml  layer_transaction.ml
manifest/products/: product_archive.ml  product_archive_blocks.ml  product_archive_hardfork_toolbox.ml  product_batch_txn_tool.ml  product_benchmarks.ml  product_best_tip_merger.ml  product_cli.ml  product_delegation_verify.ml  product_disk_caching_stats.ml  product_dump_blocks.ml  product_extract_blocks.ml  product_generate_keypair.ml  product_graphql_schema_dump.ml  product_heap_usage.ml  product_ledger_export_bench.ml  product_logproc.ml  product_mina.ml  product_missing_blocks_auditor.ml  product_reformat.ml  product_replayer.ml  product_rocksdb_scanner.ml  product_rosetta.ml  product_runtime_genesis_ledger.ml  product_test_executive.ml  product_validate_keypair.ml  product_zkapp_limits.ml  product_zkapp_test_transaction.ml  product_zkapps_examples.ml
manifest/test/: dune  test_integration.ml  test_manifest.ml
src/: .merlin  .ocamlformat  BUILD.bazel  bigint.rs  bits.ml  bits_intf.ml  block.ml  block_time.ml  block_time.mli  blockchain.ml  blockchain.mli  bn382_dlog.rs  bn382_pairing.rs  check_jemalloc.sh  common.rs  config.mlh  cstubs_applicative.opam  default.nix  difficulty_info.ml  digestif_flags_gen.ml  dummy.sh  dune  dune-project  dune.alloc.inc  dune.flags.inc  dune.linker.inc  error_json.opam  field_bin.ml  gossip_net.ml  gossip_net.mli  graphql-ppx-config.inc  h_list.ml  incrementer.ml  inline_test_quiet_logs.opam  jbuild  key_gen.opam  lib.rs  libp2p_ipc.opam  linear_pipe.ml  linear_pipe.mli  (+43 more)
src/app/archive/: BUILD.bazel  README.md  UPGRADE_element_ids_hash.md  add_indexes.sql  add_unique_constraints.sql  archive.ml  archive.opam  archive_graphql_schema.json  archive_mainnet_signatures.ml  create_schema.sql  create_schema_new.sql  dedup_zkapp_element_ids.sql  downgrade-to-berkeley.sql  downgrade_to_berkeley.sql  drop_tables.sql  dune  dune-project  migrate_zkapp_element_ids_to_hash.sql  patch_migrated_db.sql  snapp_tables.sql  upgrade-to-mesa.sql  upgrade_to_mesa.sql  zkapp_tables.sql
src/app/archive_blocks/: README.md  archive_blocks.ml  dune
src/app/archive_hardfork_toolbox/: README.md  Readme.md  archive_hardfork_toolbox.ml  change_plan.ml  config.ml  dune  logic.ml  sql.ml  utils.ml
src/app/base58uncheck/: base58uncheck.ml  dune
src/app/batch_generate_keys/: Dockerfile_txn_burst  batch_generate_keys.ml  dune
src/app/batch_txn_tool/: Dockerfile_txn_burst  (+4 more)
src/backend_utilities/: go.mod  utilities.go
src/config/: BUILD.bazel  BUILD.bzl  berkeley_archive_migration.mlh  berkeley_archive_migration_devnet.mlh  config.bzl  config.mlh.tpl  debug.bzl  debug.mlh  dev.mlh  dev_frontend.mlh  dev_medium_curves.mlh  dev_snark.mlh  devnet.mlh  dune  fake_hash.mlh  fork.mlh  fork_at_100.mlh  fork_at_3757.mlh  fork_at_5.mlh  fork_at_5187.mlh  fork_test_11-12-2020.mlh  fuzz_medium.mlh  fuzz_small.mlh  integration_tests.mlh  integration_tests_slot_tx_end.mlh  lightnet.mlh  mainnet.mlh  net_10k.mlh  net_5tps.mlh  nonconsensus_dev.mlh  nonconsensus_mainnet.mlh  nonconsensus_medium_curves.mlh  not_test_postake_bootstrap.mlh  print_binable_functors.mlh  print_versioned_types.mlh  public_network.mlh  release.mlh  test.mlh  test_archive_processor.mlh  test_posig.mlh  (+43 more)
src/generate_config/: config_rule.sexp  dune  generate_config.ml
src/lib/: rescue.py
src/libp2p_ipc/: Makefile  build.ml  build.mli  default.nix  dune  go.mod  go.sum  incremental_parsing.ml  ipc.ml  libp2p_ipc.capnp  libp2p_ipc.ml  libp2p_ipc.mli  rpcs.ml  rpcs.mli
src/nonconsensus/: README  dune-project
src/profile/: BUILD.bazel
src/protocols/: coda_pow.ml  coda_praos.ml  coda_transition_frontier.ml  dune  jbuild  minibit_pow.ml
src/rust/: Cargo.toml
src/snarky-typescript/: package-lock.json  package.json  tsconfig.json
src/wasm-bg-verifier/: Cargo.toml  README.md
zcash_proofs/: Cargo.toml  README.md
zcash_proofs/examples/: bench.rs
zcash_proofs/src/: hashreader.rs  prover.rs
(+15905 files in other folders)
