[workspace]
resolver = "2"
members = [
  "src/lib/crypto/kimchi_bindings/stubs",
  "src/lib/crypto/kimchi_bindings/wasm",
  # Proof-systems dependencies
  "src/lib/crypto/proof-systems/curves",
  "src/lib/crypto/proof-systems/kimchi",
  "src/lib/crypto/proof-systems/groupmap",
  "src/lib/crypto/proof-systems/internal-tracing",
  "src/lib/crypto/proof-systems/poly-commitment",
  "src/lib/crypto/proof-systems/poseidon",
  "src/lib/crypto/proof-systems/turshi",
  "src/lib/crypto/proof-systems/utils",
]

# Excluding proof-systems as it contains a nested Cargo workspace, and only one
# can be present.
exclude = [
  "src/lib/crypto/proof-systems"
]

# When updating proof-systems, it is recommended to match the version listed in
# src/lib/crypto/proof-systems/Cargo.toml
# Some of the dependencies listed below come directly from the requirements of
# the crates defined in src/lib/crypto/proof-systems.
[workspace.dependencies]
array-init = "2.0.0"
base64 = "0.21.5"
bcs = "0.1.3"
bitvec = "1.0.0"
blake2 = "0.10.0"
bs58 = "0.5.0"
clap = "4.4.6"
colored = "2.0.0"
command-fds = "0.3"
console_error_panic_hook = { version = "0.1.6" }
convert_case = "0.6.0"
criterion = "0.5"
elf = "0.7.2"
env_logger = "0.11.1"
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4", features = ["serde"] }
iai = "0.1"
itertools = "0.12.1"
js-sys = "0.3"
libc = "0.2.62"
libflate = "2"
log = "0.4.20"
num-bigint = { version = "0.4.4", features = [ "rand", "serde" ] }
num-derive = "0.4"
num-integer = "0.1.45"
num-traits = "0.2"
# ocaml-specific
ocaml = { version = "0.22.2", features = ["no-caml-startup"] }
ocaml-gen = { version = "0.1.5" }
once_cell = "1.10.0"
os_pipe = { version = "1.1.4", features = ["io_safety"] }
paste = "1.0.5"
proc-macro2 = { version = "^1.0.74", features = ["default", "proc-macro"] }
proptest = "1.0.0"
proptest-derive = "0.4.0"
quote = "^1.0.35"
rand = { version = "0.8.5", features = ["std_rng"] }
rand_chacha = { version = "0.3.0" }
rand_core = { version = "0.6.3" }
rayon = "1.5.0"
regex = "1.10.2"
rmp-serde = "1.1.2"
secp256k1 = "0.28.2"
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.113"
serde-wasm-bindgen = ">=0.4"
serde_with = "3.6.0"
sha2 = "0.10.0"
sha3 = "0.10.8"
sprs = { version = "0.11.0", features = ["multi_thread"] }
spmc = { version = "0.3.0" }
strum = "0.26.1"
strum_macros = "0.26.1"
syn = { version = "1.0.109", features = ["full"] }
thiserror = "1.0.30"
tinytemplate = "1.1"
# Strictly enforcing 0.2.87
# Check it is up-to-date with the version in proof-systems/Cargo.toml
wasm-bindgen = { version = "=0.2.87" }
wasm-bindgen-test = ">=0.3.0"
web-sys = { version = "0.3.35", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Text",
  "Node",
  "Element",
] }

# arkworks
ark-algebra-test-templates = "0.4.2"
ark-bn254 = { version = "0.4.0" }
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-ff = { version = "0.4.2", features = ["parallel", "asm"] }
ark-poly = { version = "0.4.2", features = ["parallel"] }
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-test-curves = { version = "0.4.2", features = ["parallel", "asm"] }

# proof-systems
groupmap = { path = "src/lib/crypto/proof-systems/groupmap" }
kimchi = { path = "src/lib/crypto/proof-systems/kimchi" }
internal-tracing = { path = "src/lib/crypto/proof-systems/internal-tracing" }
mina-curves = { path = "src/lib/crypto/proof-systems/curves" }
mina-poseidon = { path = "src/lib/crypto/proof-systems/poseidon" }
o1-utils = { path = "src/lib/crypto/proof-systems/utils" }
poly-commitment = { path = "src/lib/crypto/proof-systems/poly-commitment" }
turshi = { path = "src/lib/crypto/proof-systems/turshi" }

# Temporary transitive dependencies
# Remove as soon as possible. It is temporary to get Rust 1.72 working.
## To escape this error:
## ```
## package `bumpalo v3.16.0` cannot be built because it
## requires rustc 1.73.0 or newer, while the currently
## active rustc version is 1.72.1
## ```
bumpalo = { version = "=3.14.0" }

cc = { version = "=1.0.79" }