(library
 (name manifest_lib)
 (libraries str unix)
 (wrapped false)
 (modules dune_s_expr manifest))

(library
 (name manifest_product)
 (libraries manifest_lib)
 (wrapped false)
 (modules product_mina))

(executable
 (name main)
 (libraries manifest_product)
 (modules main))

(test
 (name test_manifest)
 (libraries alcotest manifest_lib)
 (modules test_manifest))

(test
 (name test_integration)
 (libraries alcotest manifest_product)
 (modules test_integration))
